# webweg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: enroll_in_class.rs  raw_requests.rs  search_classes.rs  switch_active_quarters.rs
examples/enroll-in-classes/: Cargo.toml
examples/enroll-in-classes/src/: main.rs
examples/multiple-tasks/: Cargo.toml
examples/multiple-tasks/src/: main.rs
examples/raw-requests/: Cargo.toml
examples/search-classes/: Cargo.toml
examples/search-classes/src/: main.rs
examples/switch-quarters/: Cargo.toml
examples/switch-quarters/src/: main.rs
src/: constants.rs  lib.rs  raw_types.rs  types.rs  util.rs  webreg_clean_defn.rs  webreg_helper.rs  webreg_raw_defn.rs  webreg_wrapper.rs  wrapper.rs  ww_parser.rs
src/wrapper/: constants.rs  input_types.rs  mod.rs  req_term_builder.rs  request_builder.rs  request_data.rs  requester_term.rs  search.rs  wrapper_builder.rs  ww_helper.rs  ww_parser.rs
tests/: builder_tests.rs  util_tests.rs  wrapper_tests.rs  ww_parser_tests.rs
tests/json/: courseinfo1.json  courseinfo2.json  courseinfo3.json  courseinfo4.json  prereq1.json  prereq2.json  prereq3.json  prereq4.json  prereq5.json  schedule1.json  schedule2.json
