[package]
name = "webweg"
version = "0.6.0"
edition = "2021"
description = "An asynchronous API wrapper for UCSD's WebReg course enrollment system."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.12"
url = "2.2.2"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }