[package]
name = "webweg"
version = "0.7.2"
edition = "2021"
description = "An asynchronous API wrapper for UCSD's WebReg course enrollment system."
readme = "README.md"
homepage = "https://github.com/ewang2002/webweg/"
repository = "https://github.com/ewang2002/webweg/"
license = "MIT"
keywords = ["ucsd", "webreg", "enrollment"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.12"
url = "2.2.2"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }