[package]
name = "webweg"
version = "0.9.1"
edition = "2021"
description = "An asynchronous API wrapper for UCSD's WebReg course enrollment system."
readme = "README.md"
homepage = "https://github.com/ewang2002/webweg/"
repository = "https://github.com/ewang2002/webweg/"
license = "MIT"
keywords = ["ucsd", "webreg", "enrollment"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.0"
url = "2.4"
thiserror = "1.0"
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros"] }

[features]
default = []
multi = ["parking_lot"]